# BananaForScale

./: .env  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
backend/: pyproject.toml
backend/app/: main.py
presentation/: Speaker's Notes.txt  slides.html  slides.md
public/: index.html
server/: app.ts
server/controllers/: home.controller.ts
src/: App.vue  main.ts
src/components/: ImageInput.vue
src/router/: index.ts
src/store/: index.ts
src/views/: Home.vue
