[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Anas Mohamed <14171441+amohamed11@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.18.0"
timm = "^0.5.4"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
